UPDATE: Entire app to cupertino style
Waste of time? Yes. Worth it? Maybe.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   alarm: ^1.1.2
   shared_preferences: ^2.1.2
   http: ^1.0.0
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
