--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.1.2
   http: ^1.0.0
   fluttertoast: ^8.2.2
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
