--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.0.0
   fluttertoast: ^8.2.2
   flutter_speed_dial: ^7.0.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
