--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   intl: ^0.18.1
   just_audio: ^0.9.34
+  font_awesome_flutter: ^10.5.0
+  flutter_cupertino_datetime_picker: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -68,6 +70,7 @@ flutter:
   assets:
       - assets/nokia.mp3
       - assets/mozart.mp3
+      - assets/newnoise.mp3
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
