--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   just_audio: ^0.9.34
   font_awesome_flutter: ^10.5.0
   cupertino_text_button: ^0.0.5
+  flutter_swipe_action_cell: ^3.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
