--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   cupertino_text_button: ^0.0.5
   flutter_swipe_action_cell: ^3.1.2
+  provider: ^6.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
