--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ flutter:
       - assets/nokia.mp3
       - assets/mozart.mp3
       - assets/newnoise.mp3
+      - assets/sui.mp3
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
