--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,10 @@
     <application
         android:label="WeWake"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true"
+        >
+        
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -32,6 +35,7 @@
     android:name="dev.fluttercommunity.plus.androidalarmmanager.AlarmService"
     android:permission="android.permission.BIND_JOB_SERVICE"
     android:exported="false"/>
+
 <receiver
     android:name="dev.fluttercommunity.plus.androidalarmmanager.AlarmBroadcastReceiver"
     android:exported="false"/>
