--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_swipe_action_cell: ^3.1.2
   provider: ^6.0.5
   flutter_chat_bubble: ^2.0.2
+  web_socket_channel: ^2.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
