--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   provider: ^6.0.5
   flutter_chat_bubble: ^2.0.2
   web_socket_channel: ^2.4.0
+  uuid: ^3.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
