--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   web_socket_channel: ^2.4.0
   uuid: ^3.0.7
   table_calendar: ^3.0.9
+  redis: ^3.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
