ADD; RedisPubSub for synchornization between alarms of clients

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "Database": "Data Source=5CG6257NNF\\SQLEXPRESS;Initial Catalog=WeWakeDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+        "Database": "Data Source=5CG6257NNF\\SQLEXPRESS;Initial Catalog=WeWakeDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+        "RedisDB": "localhost"
     }
 }
