--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,18 +16,29 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 2.x
+          flutter-version: 3.x
 
       - name: Install dependencies
         run: flutter pub get
 
       - name: Build APK
         run: flutter build apk --release --release --dart-define=Server_Url=${{ secrets.SERVER_URL }} --dart-define=Redis_Url=${{ secrets.REDIS_URL }} --dart-define=Redis_Pass=${{ secrets.REDIS_PASS }}
+    
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+            GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        with:
+            tag_name: ${{github.ref}}
+            release_name: Release ${{github.ref}}
+            draft: false
+            prerelease: false
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ github.event.repository.releases_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: build/app/outputs/flutter-apk/app-release.apk
-          asset_name: MyApp-release.apk
+          asset_name: WeWake-release.apk
           asset_content_type: application/vnd.android.package-archive
