--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
             GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         with:
             tag_name: Release
-            release_name: Release ${{github.ref}}
+            release_name: Release ${{github.run_number}}
             draft: false
             prerelease: false
 
