--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,8 +31,8 @@ jobs:
         env:
             GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         with:
-            tag_name: Release ${{github.run_number}}
-            release_name: v1.0.${{github.run_number}}
+            tag_name: Release
+            release_name: Release v1.0.${{github.run_number}}
             draft: false
             prerelease: false
 
