--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
         env:
             GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         with:
-            tag_name: Release
+            tag_name: Release_1.0.${{github.run_number}}
             release_name: Release v1.0.${{github.run_number}}
             draft: false
             prerelease: false
